# TheAtlasOceanWhale

./: .clang-format  .gitignore  .nvim-dap.lua  CMakeLists.txt  Doxyfile  conanfile.py
src/: CMakeLists.txt  main.cpp
src/cli_builder/: CMakeLists.txt  cli_builder.cpp
src/cli_builder/include/taow/: cli_builder.hpp  cli_builder_macros.hpp  exceptions.hpp
src/http_client/: CMakeLists.txt  form_encoding.cpp  http_client.cpp  multipart.cpp  request.cpp  result.cpp  url.cpp  url_encoder.cpp  urls.cpp
src/http_client/include/taow/: form_encoding.hpp  http_client.hpp  http_client_exceptions.hpp  multipart.hpp  url.hpp
src/http_client/include/taow/http_client/: client.hpp  request.hpp  url.hpp
src/json/: CMakeLists.txt
src/json/include/taow/: json.hpp
src/json/include/taow/json/: macros.hpp
src/logger/: CMakeLists.txt  main.cpp
src/logger/include/: logger_config.hpp
src/logging/: CMakeLists.txt  log_file_handler.cpp  log_manager.cpp  logging.cpp
src/logging/include/taow/: exception.hpp  log_file_handler.hpp  log_manager.hpp  logging.hpp  logging_exception.hpp
src/test/: CMakeLists.txt  logger_test.cpp
src/utility/: CMakeLists.txt
src/utility/include/taow/: utility.hpp
src/utility/include/taow/utility/: string_utility.hpp
src/utils/: CMakeLists.txt  date_time_utils.cpp  string_utils.cpp
src/utils/include/taow/: date_time_utils.hpp  string_utils.hpp  type_utils.hpp  utils_exception.hpp  utils_macros.hpp
test/: CMakeLists.txt  logger_test.cpp
tests/: CMakeLists.txt  http_client.cpp  json.cpp
